# differential

./: .clang-format  CMakeLists.txt  build.sh  load-modules.sh  run.sh  start-job.sh
include/: bf.h  differential.h
src/: CMakeLists.txt  bf.cpp  difference_map.cpp  difference_map.h  differential.cpp  main.cpp
tests/: CMakeLists.txt  bf_test.cpp  difference_map_test.cpp  differential_test.cpp  hash.h
